# lookingglass

./: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/domain/lookingglass/: __init__.py  models.py  service.py
backend/app/domain/network/: __init__.py  models.py  service.py
backend/app/domain/speedtest/: __init__.py  service.py
backend/app/routes/: lookingglass.py  network.py  speedtest.py
frontend/: .lintstagedrc  .prettierignore  CONTRIBUTING.md  ENV.md  LICENSE  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-header.tsx  location-provider.tsx  looking-glass.tsx  network-info.tsx  speed-test.tsx
frontend/hooks/: use-looking-glass.ts  use-network-info.ts
frontend/lib/api/: client.ts  index.ts  types.ts
frontend/lib/api/endpoints/: lookingglass.ts  network.ts
